5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4125/executions/1723_2502.log
== TEST (2019-05-13 22:30:24) 
-- CODE:
from mat import*
n = int(input("digite qualquer numero: "))

pi1 = 0
const = (12)**0.5
i = 0
j = 0

while(n>1):

	pi1 = pi1 + const*((-1)**j)  *  (1/(2*i)*(3**i))
	n = n - 1	
	i = i + 1
	j = j + 1

print(round(pi1,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from mat import*
ModuleNotFoundError: No module named 'mat'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:30:33) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))

pi1 = 0
const = (12)**0.5
i = 0
j = 0

while(n>1):

	pi1 = pi1 + const*((-1)**j)  *  (1/(2*i)*(3**i))
	n = n - 1	
	i = i + 1
	j = j + 1

print(round(pi1,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    pi1 = pi1 + const*((-1)**j)  *  (1/(2*i)*(3**i))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:30:38) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))

pi1 = 0
const = (12)**0.5
i = 0
j = 0

while(n>1):

	pi1 = pi1 + const*((-1)**j)  *  (1/(2*i)*(3**i))
	n = n - 1	
	i = i + 1
	j = j + 1

print(round(pi1,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    pi1 = pi1 + const*((-1)**j)  *  (1/(2*i)*(3**i))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:31:42) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))

pi1 = 0
const = (12)**0.5
i = 0
j = 0

while(n>1):

	pi1 = pi1 + const*((-1)**j)  *  (1/(2i+ 1)*(3**i))
	n = n - 1	
	i = i + 1
	j = j + 1

print(round(pi1,8))
-- ERROR:
File "XXXX", line 11
    pi1 = pi1 + const*((-1)**j)  *  (1/(2i+ 1)*(3**i))
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:32:23) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))

pi1 = 0
const = (12)**0.5
i = 0
j = 0

while(n>1):

	pi1 = pi1 + const*((-1)**j)  *  (1/(((2*i)+ 1)*(3**i))
	n = n - 1	
	i = i + 1
	j = j + 1

print(round(pi1,8))
-- ERROR:
File "XXXX", line 12
    n = n - 1	
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:32:36) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))

pi1 = 0
const = (12)**0.5
i = 0
j = 0

while(n>1):

	pi1 = pi1 + const*((-1)**j)  *  (1/(((2*i)+ 1)*(3**i)))
	n = n - 1	
	i = i + 1
	j = j + 1

print(round(pi1,8))
-- OUTPUT:
3.14159051
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:33:46) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))

pi1 = 12**0.5
i = 0
j = 0

while(n>1):

	pi1 = pi1*(((-1)**j)  *  (1/(((2*i)+ 1)*(3**i))))
	n = n - 1	
	i = i + 1
	j = j + 1

print(round(pi1,8))
-- OUTPUT:
-0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:34:11) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))

pi1 = 12**0.5
i = 0
j = 0

while(n>1):

	pi1 = pi1*(((-1)**j)  *  (1/(((2*i)+ 1)*(3**i))))
	n = n - 1	
	i = i + 1
	j = j + 1

print(round(pi1,8))
-- OUTPUT:
-0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 22:34:21) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))

pi1 = 12**0.5
i = 0
j = 0

while(n>1):

	pi1 = pi1*(((-1)**j)  *  (1/(((2*i)+ 1)*(3**i))))
	n = n - 1	
	i = i + 1
	j = j + 1

print(round(pi1,8))
-- EXECUTION TIME:
0.135237
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
-0.0
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
-0.0
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
-0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:34:35) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))

pi1 = 12**0.5
i = 0
j = 0

while(n>1):

	pi1 = pi1*(((-1)**j)  *  (1/(((2*i)+ 1)*(3**i))))
	n = n - 1	
	i = i + 1
	j = j + 1

print(round(pi1,8))
-- OUTPUT:
-0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:34:59) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))
soma = 0
pi1 = 12**0.5
i = 0
j = 0

while(n>1):

	soma = soma + pi1*(((-1)**j)  *  (1/(((2*i)+ 1)*(3**i))))
	n = n - 1	
	i = i + 1
	j = j + 1

print(round(pi1,8))
-- OUTPUT:
3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:35:36) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))
soma = 0
pi1 = 12**0.5
i = 0
j = 0

while(n>1):

	soma = pi1*(soma + ((-1)**j)  *  (1/(((2*i)+ 1)*(3**i))))
	n = n - 1	
	i = i + 1
	j = j + 1

print(round(pi1,8))
-- OUTPUT:
3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:36:13) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))
soma = 1
pi1 = 12**0.5
i = 0
j = 0

while(n>1):

	soma = pi1*(soma + ((-1)**j)  *  (1/(((2*i)+ 1)*(3**i))))
	n = n - 1	
	i = i + 1
	j = j + 1

print(round(pi1,8))
-- OUTPUT:
3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:36:17) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))
soma = 1
pi1 = 12**0.5
i = 0
j = 0

while(n>1):

	soma = pi1*(soma + ((-1)**j)  *  (1/(((2*i)+ 1)*(3**i))))
	n = n - 1	
	i = i + 1
	j = j + 1

print(round(pi1,8))
-- OUTPUT:
3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:36:20) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))
soma = 1
pi1 = 12**0.5
i = 0
j = 0

while(n>1):

	soma = pi1*(soma + ((-1)**j)  *  (1/(((2*i)+ 1)*(3**i))))
	n = n - 1	
	i = i + 1
	j = j + 1

print(round(pi1,8))
-- OUTPUT:
3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:37:46) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))
soma = 1
pi1 = 12**0.5
i = 0

while(n>1):

	soma = soma + pi1*((-1)**i)  *  (1/(((2*i)+ 1)*(3**i)))1
	n = n - 1	
	i = i  + 1

print(round(pi1,8))
-- ERROR:
File "XXXX", line 9
    soma = soma + pi1*((-1)**i)  *  (1/(((2*i)+ 1)*(3**i)))1
                                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:37:49) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))
soma = 1
pi1 = 12**0.5
i = 0

while(n>1):

	soma = soma + pi1*((-1)**i)  *  (1/(((2*i)+ 1)*(3**i)))
	n = n - 1	
	i = i  + 1

print(round(pi1,8))
-- OUTPUT:
3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:37:53) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))
soma = 1
pi1 = 12**0.5
i = 0

while(n>1):

	soma = soma + pi1*((-1)**i)  *  (1/(((2*i)+ 1)*(3**i)))
	n = n - 1	
	i = i  + 1

print(round(pi1,8))
-- OUTPUT:
3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:38:25) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))
soma = 1
pi1 = 12**0.5
i = 0

while(n>0):

	soma = soma + pi1*((-1)**i)  *  (1/(((2*i)+ 1)*(3**i)))
	i = i  + 1
	n = n-1
print(round(pi1,8))
-- OUTPUT:
3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:39:36) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))
soma = 1
pi1 = 12**0.5
i = 0

while(n>0):

	soma = soma + (pi1*((-1)**i) * (1/(((2*i)+ 1)*(3**i))))
	i = i  + 1
	n = n-1
print(round(pi1,8))
-- OUTPUT:
3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:39:55) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))
soma = 1
pi1 = 12**0.5
i = 0

while(n>0):

	soma = soma + (pi1*((-1)**i) * (1/(((2*i+ 1)*(3**i))))
	i = i  + 1
	n = n-1
print(round(pi1,8))
-- ERROR:
File "XXXX", line 10
    i = i  + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:40:01) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))
soma = 1
pi1 = 12**0.5
i = 0

while(n>0):

	soma = soma + (pi1*((-1)**i) * (1/(((2*i+ 1)*(3**i)))
	i = i  + 1
	n = n-1
print(round(pi1,8))
-- ERROR:
File "XXXX", line 10
    i = i  + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:40:09) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))
soma = 1
pi1 = 12**0.5
i = 0

while(n>0):

	soma = soma + (pi1*((-1)**i) * (1/((2*i+ 1)*(3**i)))
	i = i  + 1
	n = n-1
print(round(pi1,8))
-- ERROR:
File "XXXX", line 10
    i = i  + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:40:13) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))
soma = 1
pi1 = 12**0.5
i = 0

while(n>0):

	soma = soma + (pi1*((-1)**i) * (1/((2*i+ 1)*(3**i))))
	i = i  + 1
	n = n-1
print(round(pi1,8))
-- OUTPUT:
3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:40:44) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))
soma = 1
pi1 = 12**0.5
i = 0

while(n>0):

	soma = soma + (pi1*(-1)**i) * (1/((2*i+ 1)*(3**i)))
	i = i  + 1
	n = n-1
print(round(pi1,8))
-- OUTPUT:
3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:40:59) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))
soma = 0
pi1 = 12**0.5
i = 0

while(n>0):

	soma = soma + (pi1*(-1)**i) * (1/((2*i+ 1)*(3**i)))
	i = i  + 1
	n = n-1
print(round(pi1,8))
-- OUTPUT:
3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:41:13) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))
soma = 0
pi1 = (12)**0.5
i = 0

while(n>0):

	soma = soma + (pi1*(-1)**i) * (1/((2*i+ 1)*(3**i)))
	i = i  + 1
	n = n-1
print(round(pi1,8))
-- OUTPUT:
3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:41:27) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))
soma = 0
pi1 = (12)**0.5
i = 0

while(n>0):

	soma = soma + (pi1*((-1)**i)) * (1/((2*i+ 1)*(3**i)))
	i = i  + 1
	n = n-1
print(round(pi1,8))
-- OUTPUT:
3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:42:30) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))
soma = 0
pi1 = (12)**0.5
i = 0

while(n>0):

	soma = soma + (pi1 * (1/((2*i + 1)*(3**i)))*((-1)**i))
	i = i  + 1
	n = n-1
print(round(soma,8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:42:36) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))
soma = 0
pi1 = (12)**0.5
i = 0

while(n>0):

	soma = soma + (pi1 * (1/((2*i + 1)*(3**i)))*((-1)**i))
	i = i  + 1
	n = n-1
print(round(soma,8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 22:42:43) 
-- CODE:
from math import*
n = int(input("digite qualquer numero: "))
soma = 0
pi1 = (12)**0.5
i = 0

while(n>0):

	soma = soma + (pi1 * (1/((2*i + 1)*(3**i)))*((-1)**i))
	i = i  + 1
	n = n-1
print(round(soma,8))
-- EXECUTION TIME:
0.145499
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
